# clamfig

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: publish-to-test-pypi.yml  release-test.yml  release.yml
src/clamfig/: __init__.py  base.py
tests/: test_dataclass.py
