[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=clamfig
version = attr: clamfig.__version__
author=PyDefi Development Team
author_email=clamdad+pydefi@protonmail.com
description= Serialization/Deserialization for dataclasses
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/pydefi/clamfig
license_files = LICENSE.txt
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license=MIT
keywords=
    dataclasses
    json
    serialize
    deserialize
    config file

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
